# kdeconnect-kde

./: README.md
core/: device.cpp
plugins/: CMakeLists.txt
plugins/clipboard/: CMakeLists.txt
plugins/filemanager/: CMakeLists.txt  filemanager_config.cpp  filemanager_config.h  filemanagerplugin.cpp  filemanagerplugin.h  kdeconnect_filemanager.json  kdeconnect_filemanager_config.desktop
plugins/findthisdevice/: findthisdevice_config.cpp
plugins/notifications/: CMakeLists.txt
plugins/ping/: kdeconnect_ping.json
plugins/runcommand/: CMakeLists.txt  runcommand_config.cpp  runcommand_config.h  runcommandplugin.cpp  runcommandplugin.h
